[tool.poetry]
name = "python-kismet-db2kml"
version = "2023.10-dev1"
description = "Python GUI to generate KML files of device locations from KismetDB files."
authors = ["hobobandy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.16.3"
colour = "^0.1.5"
simplekml = "^1.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
